# uidp

./: .gitignore  AGENT.md  AI时代原型工具.md  README.md  README_EN.md  package.json  test.uidp
.github/workflows/: release.yml
.tools/scripts/: git-finish.js  git-start.js  release.js
docs/: product.md  simple-test.uidp  sketch.uidp  test.uidp
docs/agent/: branch-management.md  commit-convention.md  git-workflow.md  gitignore.md  pull-request.md  versioning.md
uidp-editor/: package-lock.json  package.json
uidp-editor/src/: App.css  App.tsx  i18n.ts  main.tsx  types.ts
uidp-editor/src-tauri/: Cargo.toml  tauri.conf.json
uidp-editor/src-tauri/capabilities/: default.json
uidp-editor/src-tauri/src/: lib.rs  main.rs
uidp-editor/src/types/: excalidraw.ts
uidp-editor/src/utils/: uidp.test.ts  uidp.ts
