[package]
name = "uidp-editor"
version = "0.1.0"
description = "UIDP Editor - 界面几何数据编辑器"
authors = ["you"]
edition = "2021"

[lib]
name = "uidp_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
